--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -19,6 +19,11 @@ steps:
       from_secret: docker_username
     DOCKER_PASSWORD:
       from_secret: docker_password
+  when:
+    event:
+    - push
+    - tag
+    - pull_request
 
 - name: publish
   image: docker.io/drycc/go-dev
@@ -57,6 +62,11 @@ steps:
   environment:
     DEV_REGISTRY:
       from_secret: dev_registry
+  when:
+    event:
+    - push
+    - tag
+    - pull_request
 
 - name: publish
   image: docker.io/drycc/go-dev
@@ -90,6 +100,10 @@ steps:
   environment:
     DRYCC_REGISTRY:
       from_secret: drycc_registry
+  when:
+    event:
+      - push
+      - tag
 
 - name: publish
   image: plugins/manifest
@@ -102,7 +116,6 @@ steps:
   environment:
     DEV_REGISTRY:
       from_secret: dev_registry
-
   when:
     event:
     - push
@@ -111,4 +124,3 @@ steps:
 depends_on:
 - linux-amd64
 - linux-arm64
-
